macros/tests/ui/fail_partial_define.stderr
error: Invalid SurrealQL: Parse error: Invalid query: Unexpected end of file, expected an expression
 --> [1:12]
  |
1 | DEFINE TABLE
  |            ^

 --> tests/ui/fail_partial_define.rs:5:23
  |
5 |     let _ = surql_check!("DEFINE TABLE");
  |                          ^^^^^^^^^^^^^^
